# helloCuda

./: CMakeLists.txt  README.md  notes.txt
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
bulid/src/: Makefile  cmake_install.cmake
src/: .cvl.cu.swp  .cvlD.cu.swp  .cvlH.cu.swp  CMakeLists.txt  cvl.cu  cvlD.cu  cvlH.cu  hey.cu  heyD.cu  heyH.backup  heyH.cu
